# mobyrave

./: .gitignore  CMakeLists.txt  README.md  moby.cpp  mobyrave.cpp  mobyrave.h  mobyspace.h  testplugin.py
scenes/: youbot1.env.xml
